Revert: Save local changes before merge