@@ -26,12 +26,7 @@ public class Maze extends GameObject implements Iterable<MazeObject>, Visible {
     private Entry entry;
 
     /**
-     * Constructor for Maze. Initializes all important elements.--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-     * --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-     * --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-     * --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-     * --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-     * --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+     * Constructor for Maze. Initializes all important elements.
      *
      * @param position The base position of the maze. Should be normally (0, 0).
      */
